mongo cluster added

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
-PORT=3000
-MONGODB_URI=mongodb://localhost:27017/surveyjs_db
 NODE_ENV=development
+PORT=3000
+
+# MongoDB Atlas Connection
+# Reemplaza con tu URI de MongoDB Atlas
+MONGODB_URI=mongodb+srv://desarrollador_db_user:WH9djZnzVqHa6dl5@cluster0.4rfwro1.mongodb.net/surveyjs_db?retryWrites=true&w=majority&appName=Cluster0
+
+# Nota: Para usar MongoDB local en lugar de Atlas, usa:
+# MONGODB_URI=mongodb://localhost:27017/surveyjs_db
